<resources>
    <string name="app_name">ElectronicMoneyApp</string>
    <string name="regiPageButtonJuice">ジュース</string>
    <string name="regiPageButtonSnack">お菓子</string>
    <string name="regiPageButtonIce">アイス</string>
    <string name="regiPageButtonNoodle">カップ麺</string>
    <string name="regiPageButtonCoffee">コーヒー</string>
    <string name="regiPageButtonOther">その他</string>
    <string name="regiPageButtonRegiBack">戻る</string>
    <string name="regiPageButtonNewRegi">新規登録</string>
    <string name="regiPageButtonRegiBack2">戻る</string>
    <string name="regiPageButtonNewRegi2">登録</string>
    <string name="regiPageButtonnewregi">新規登録</string>
    <string name="itemNameTextView">商品名を入力してください</string>
    <string name="itemNameText">商品名を入力</string>
    <string name="itemPriceTextView">価格を入力してください</string>
    <string name="itemPriceText">価格を入力</string>
    <string name="itemGenreTextView">ジャンルを選択してください</string>
    <string name="itemRegiTextView">商品登録</string>
    <string name="genreTextView">ジャンル</string>
    <string name="buttonItemEditBack">戻る</string>
    <string name="buttonChooseActionBack">戻る</string>
    <string name="buttonDeleteItem">商品削除</string>
    <string name="buttonEditItem">商品内容変更</string>
    <string name="itemEditNameTextView">商品名を入力してください</string>
    <string name="itemEditPriceTextView">価格を入力してください</string>
    <string name="itemEditGenreTextView">ジャンルを選択してください</string>
    <string name="itemEditBackButton">戻る</string>
    <string name="itemEditOKButton">登録</string>

    <!-- purchase_item_activity -->
    <string name="purchase_item_activity_name">商品購入</string>
    <string name="juice">ジュース</string>
    <string name="snack">お菓子</string>
    <string name="ice">アイス</string>
    <string name="noodle">カップ麺</string>
    <string name="coffee_tea">コーヒー＆紅茶</string>
    <string name="others">その他</string>
    <string name="return_txt">戻る</string>

    <!-- my_page_activity -->
    <string name="my_page_activity_name">マイページ</string>
    <string name="purchase_item">商品購入</string>
    <string name="logout">ログアウト</string>
    <string name="purchase_history">購入履歴</string>
    <string name="setting">設定</string>
    <string name="register_item_for_juicekai">商品登録</string>

    <!-- purchase_by_genre_activity -->
    <string name="price_sort_low">価格(安い順)</string>
    <string name="price_sort_high">価格(高い順)</string>
    <string name="price_sort_alpha">アルファベット順</string>

    <!-- purchase_by_genre_activity -->
    <string name="this_month">今月</string>
    <string name="last_month">先月</string>
    <string name="login">ログイン</string>
    <string name="register_item">商品登録</string>
    <string name="register_user">新規登録</string>
</resources>