<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <Button
        android:id="@+id/buttonJuice"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/regiPageButtonJuice"
        app:layout_constraintBottom_toTopOf="@+id/buttonSnack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSnack"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/regiPageButtonSnack"
        app:layout_constraintBottom_toTopOf="@+id/buttonIce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJuice" />

    <Button
        android:id="@+id/buttonIce"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/regiPageButtonIce"
        app:layout_constraintBottom_toTopOf="@+id/buttonNoodle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSnack" />

    <Button
        android:id="@+id/buttonNoodle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/regiPageButtonNoodle"
        app:layout_constraintBottom_toTopOf="@+id/buttonCoffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIce" />

    <Button
        android:id="@+id/buttonCoffee"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/regiPageButtonCoffee"
        app:layout_constraintBottom_toTopOf="@+id/buttonOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNoodle" />

    <Button
        android:id="@+id/buttonOther"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/regiPageButtonOther"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCoffee" />

    <Button
        android:id="@+id/buttonNewRegi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/regiPageButtonNewRegi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRegiBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonOther" />

    <Button
        android:id="@+id/buttonRegiBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/return_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewRegi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOther"
        app:layout_constraintVertical_bias="0.566" />
</androidx.constraintlayout.widget.ConstraintLayout>