<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActionChoose">

    <TextView
        android:id="@+id/choosedItemNameTextView"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditItem"
        app:layout_constraintEnd_toStartOf="@+id/choosedItemPriceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choosedItemPriceTextView"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choosedItemNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonEditItem"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/buttonEditItem"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosedItemNameTextView" />

    <Button
        android:id="@+id/buttonDeleteItem"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/buttonDeleteItem"
        app:layout_constraintBottom_toTopOf="@+id/buttonChooseActionBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditItem" />

    <Button
        android:id="@+id/buttonChooseActionBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="283dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/buttonChooseActionBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteItem" />
</androidx.constraintlayout.widget.ConstraintLayout>